--- a/vueproject/package.json
+++ b/vueproject/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactivity",
+  "name": "vueproject",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,17 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "core-js": "^3.6.5",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
@@ -31,7 +30,7 @@
       "eslint:recommended"
     ],
     "parserOptions": {
-      "ecmaVersion": 2020
+      "parser": "babel-eslint"
     },
     "rules": {}
   },
